<resources>
    <string name="app_name">TriviaMasters</string>
    <string name="search_categories">Search categories</string>
    <string name="fully_random">Fully random!</string>
    <string name="extra_hard">Extra hard</string>
    <string name="own_game">Own game</string>
    <string name="my_profile">My profile</string>
    <string name="points_scored">Points scored</string>
    <string name="playing_since">Has been playing since</string>
    <string name="category_example">For example, Russia</string>
    <string name="start">Start</string>
    <string name="categories">Categories</string>
    <string name="questions_price">Questions price</string>
    <string name="from">From</string>
    <string name="to">to</string>
    <string name="questions_number">Max questions number</string>
    <string name="question">Question:</string>
    <string name="answer">Answer</string>
    <string name="your_answer">Your answer</string>
    <string name="category">Category:</string>
    <string name="price">Price:</string>
    <string name="quests">Quests</string>
    <string name="profile">Profile</string>
    <string name="welcome">Welcome to Trivia Masters!</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="continue_without_reg">Continue without registration</string>
    <string name="email_disclaimer">Enter your email address that will be used to log into your account. We will send confirmation email to this address.</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm the password</string>
    <string name="username_hint">How can we call you, stranger?</string>
    <string name="username">Your username</string>
    <string name="search_categories_description">In this mode you have to answer to all questions from chosen category. </string>
    <string name="fully_random_description">In this mode you have to answer to random number of random questions from random categories. Sounds randomly!</string>
    <string name="extra_hard_description">In this mode you have to answer the hardest questions. Get ready!</string>
    <string name="own_game_description">Customize the game as you wish!</string>
    <string name="waiting_for_confirmation">Waiting for confirmation...</string>
    <string name="cancel">Cancel</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="done">Done</string>
    <string name="questions_count">Question</string>
    <string name="wrong_answer">Wrong answer</string>
    <string name="time_out">Time out</string>
    <string name="right_answer">Right answer</string>
    <string name="result">Result</string>
    <string name="correct_answers">Correct answers:</string>
    <string name="time_spent">Time spent in seconds:</string>
    <string name="points_earned">Points earned:</string>
    <string name="finish">Finish</string>
    <string name="games_played">Games played:</string>
    <string name="score">Score:</string>
    <string name="questions_answered">Questions answered:</string>
    <string name="started_playing">Has been playing since</string>

    <string name="mock_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua </string>

</resources>